# VirtualSoc

./: CMakeLists.txt  README.md  client.cpp  main.cpp  virtualSoc.db
DOB/: DOB.cpp  DOB.h
Interface/: chatwindow.cpp  chatwindow.h  chatwindow.ui  createpost.cpp  createpost.h  createpost.ui  friendlist.cpp  friendlist.h  friendlist.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  window.cpp  window.h
Users/: User.cpp  User.h
